--- a/styles/gauntlet.css
+++ b/styles/gauntlet.css
@@ -5,6 +5,10 @@ body {
   font-size: 3em;
 }
 
+.hide-selections {
+  display: none;
+}
+
 .field {
   margin: 20px 0 0 0;
 }
@@ -21,7 +25,7 @@ body {
 /*
   Section styles
  */
-.card { 
+.card {
   display: none;
 }
 
