--- a/styles/gauntlet.css
+++ b/styles/gauntlet.css
@@ -163,3 +163,26 @@ body {
   margin: 10% 20%;
   padding: 5%;
 }
+
+.classImg {
+  display: block;
+  margin: 5px auto;
+  height: 200px;
+  max-width: 100%;
+}
+
+.selectedItem {
+  box-shadow: 2px 2px 2px 5px #aaa;
+  text-decoration: none;
+  background-color: white;
+  color: #888;
+  border-radius: 5px;
+  display: inline-block;
+  margin: 10px;
+  font-size: 25px;
+  text-transform: uppercase;
+  font-weight: 600;
+  padding: 15px 10px;
+  min-width: 260px;
+}
+}
