--- a/styles/gauntlet.css
+++ b/styles/gauntlet.css
@@ -7,6 +7,10 @@ body {
   background-repeat: none;
   background-attachment: fixed;
   background-position: center;
+  position: relative;
+  float: left;
+  height: 1500px;
+  width: 100%;
 }
 
 .hide-selections {
@@ -164,9 +168,10 @@ body {
 
 .message{
   background-color: rgba(255,255,255,0.7);
+  border-radius: 5px;
   position: relative;
   display: block;
-  margin: 10% 20%;
+  margin: 5% 20%;
   padding: 5%;
 }
 
@@ -207,7 +212,7 @@ body {
 
 #magicSpellSelect {
   display: block;
-  margin: 0 auto;
+  margin: 10px auto;
   background-color: white;
   box-shadow: 1px 1px 1px 3px #aaa;
   border-radius: 2px;
@@ -222,4 +227,22 @@ body {
   background-color: rgba(255, 255, 255, 0.7);
   text-align: center;
   padding: 3px;
+}
+
+.endGame {
+  display: inline-block;
+}
+
+.winner {
+  color: #1F9F57;
+}
+
+.loser {
+  color: #9D0920;
+}
+
+#battleLog td {
+  background-color: rgba(255, 255, 255, 0.7);
+  text-align: center;
+  font-size: .5em;
 }
