--- a/styles/gauntlet.css
+++ b/styles/gauntlet.css
@@ -171,8 +171,9 @@ body {
   border-radius: 5px;
   position: relative;
   display: block;
-  margin: 5% 20%;
+  margin: 17% 20%;
   padding: 5%;
+  text-align: center;
 }
 
 .classImg {
@@ -245,4 +246,17 @@ body {
   background-color: rgba(255, 255, 255, 0.7);
   text-align: center;
   font-size: .5em;
+}
+
+
+#gauntletTitle {
+  text-align: center;
+  font-family: 'Permanent Marker', cursive;
+  font-size: 4em;
+  margin: 15px;
+  text-shadow: 3px 3px 3px rgba(93,9,32,0.7);
+}
+
+#restartGame {
+  margin-left: 15%;
 }
